--- a/build.gradle
+++ b/build.gradle
@@ -31,13 +31,14 @@ dependencies {
     implementation 'org.liquibase:liquibase-core'
 
     // s3
-//    implementation("software.amazon.awssdk:aws-sdk-java:2.29.33")
-//    implementation("software.amazon.awssdk:apache-client:2.29.33")
+    implementation("software.amazon.awssdk:aws-sdk-java:2.29.33")
+    implementation("software.amazon.awssdk:apache-client:2.29.33")
+//    implementation 'software.amazon.awssdk:netty-nio-client:2.23.11'
 //
 //    // web
 //    implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0")
 //    implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation('org.springframework.boot:spring-boot-starter-web')
 
     // kotlin
     implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
