--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,13 +8,18 @@ spring:
     driver-class-name: org.postgresql.Driver
   jooq:
     sql-dialect: postgres
-  servlet:
-    multipart:
-      max-file-size: ${MAX_SIZE:5GB}
-      max-request-size: ${MAX_SIZE:5GB}
-  mvc:
-    async:
-      request-timeout: 5m
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          # вместо JWK‑url используем local secret
+          secret-key: ${JWT_SECRET:change-me-supersecret}
+jwt:
+  secret: ${JWT_SECRET:change-me-supersecret}
+#  servlet:
+#    multipart:
+#      max-file-size: ${MAX_SIZE:5MB}
+#      max-request-size: ${MAX_SIZE:5MB}
 logging:
   level:
     root: info
@@ -22,6 +27,6 @@ s3:
   key-id: ${S3_KEY_ID}
   secret-key: ${S3_SECRET_KEY}
   region: ${S3_REGION:ru-central1}
-  endpoint: ${S3_ENDPOINT:https://storage.yandexcloud.net}
+  endpoint: ${S3_ENDPOINT}
   bucket: ${S3_BUCKET}
-  temp-bucket: ${S3_TEMP_BUCKET}
+  temp-bucket: ${S3_BUCKET_TEMP}
